app-deployments/app3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-svc
  namespace: app3
spec:
  selector:
    app: app3
  ports:
    - name: http
      port: 80
      targetPort: http
